# palet

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg
palet/: color.py  image.py  palette.py  pallet.py
tests/: test_color.py  test_palette.py  test_pallet.py
