[metadata]
name = palet
version = attr: palet.version.VERSION
description = Pallet Extraction and Management Tool for Game Assets Experimentation
long_description = file: README.md
long_description_content_type = text/markdown
author = Abhishta Gatya
author_email = abhishtagatya@yahoo.com
url = https://github.com/abhishtagatya/palet
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Topic :: Artistic Software
  Topic :: Software Development :: Libraries :: Python Modules
project_urls =
  Homepage = https://github.com/abhishtagatya/palet
  Change Log = https://github.com/abhishtagatya/palet/CHANGELOG.md

[options]
packages = find:
python_requires = >=3.8
zip_safe = True
include_package_data = True
install_requires =
  pillow==10.2.0


[options.packages.find]xw
exclude =
  tests
  tests.*
  docs
  docs.*